--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="html,odev,kodluyoruz,patika">
+    <meta name="description" content="2 numarali odeve ait kaynak kod">
 
     <title>htmlOdev1</title>
 </head>
 <body>
-    <h1>Omer Serdar KOSE</h1>
+    <h1>Ömer Serdar KÖSE</h1>
     <h2>About</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores sapiente laudantium dicta expedita eaque magni earum, nostrum odio, sint corrupti voluptatum odit consequatur consectetur reiciendis itaque minima incidunt accusantium eos eveniet aliquid. Dolor placeat provident est tempora vel nam quis accusantium rem officiis magnam? Nihil repudiandae tempora esse harum?
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores sapiente laudantium dicta expedita eaque magni earum, nostrum odio, sint corrupti voluptatum odit consequatur consectetur reiciendis itaque minima incidunt accusantium eos eveniet aliquid. Dolor placeat provident est tempora vel nam quis accusantium rem officiis magnam? Nihil repudiandae tempora esse harum?
     </p>
     <h3>10 Fingers Try</h3>
-        <h4>The US has enlisted commercial planes to help with the evacuation of from Afghanistan</h4>
-        <p>A Pentagon statement said the 18 aircraft would not fly to Kabul, but would instead help move people transiting in thirf countries.<br>Many thousands of Afghans are crowded outside Kabul airport,desperate to flee the country after the Talibam swept to power last week.<br>At least 20 people hace died, a NATO official told Reuters news agency.<br>But reports suhhest the scene is calmer om Sunday than in previous days.<br>UK armed forces minister Hames Heappey said the Taliban were npw marshalling people into queues at Hamid Karzai International Airport, making the process faster for thpse hoping to leave. Bla bla bla....</p>
+    <h4>The US has enlisted commercial planes to help with the evacuation of from Afghanistan</h4>
+    <p>A Pentagon statement said the 18 aircraft would not fly to Kabul, but would instead help move people transiting in thirf countries.<br>Many thousands of Afghans are crowded outside Kabul airport,desperate to flee the country after the Talibam swept to power last week.<br>At least 20 people hace died, a NATO official told Reuters news agency.<br>But reports suhhest the scene is calmer om Sunday than in previous days.<br>UK armed forces minister Hames Heappey said the Taliban were npw marshalling people into queues at Hamid Karzai International Airport, making the process faster for thpse hoping to leave. Bla bla bla....</p>
 </body>
 </html>
