--- a/index.html
+++ b/index.html
@@ -11,11 +11,49 @@
 </head>
 <body>
     <h1>Ömer Serdar KÖSE</h1>
+    <!-- hakkinda bolumu -->
     <h2>About</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores sapiente laudantium dicta expedita eaque magni earum, nostrum odio, sint corrupti voluptatum odit consequatur consectetur reiciendis itaque minima incidunt accusantium eos eveniet aliquid. Dolor placeat provident est tempora vel nam quis accusantium rem officiis magnam? Nihil repudiandae tempora esse harum?
     </p>
     <h3>10 Fingers Try</h3>
     <h4>The US has enlisted commercial planes to help with the evacuation of from Afghanistan</h4>
     <p>A Pentagon statement said the 18 aircraft would not fly to Kabul, but would instead help move people transiting in thirf countries.<br>Many thousands of Afghans are crowded outside Kabul airport,desperate to flee the country after the Talibam swept to power last week.<br>At least 20 people hace died, a NATO official told Reuters news agency.<br>But reports suhhest the scene is calmer om Sunday than in previous days.<br>UK armed forces minister Hames Heappey said the Taliban were npw marshalling people into queues at Hamid Karzai International Airport, making the process faster for thpse hoping to leave. Bla bla bla....</p>
+    <!-- ilgi alani bolumu -->
+    <div>
+        <h3>Ilgi Alanlari</h3>
+        <ol>
+            <li>Kitap
+                <ul style="list-style-type: square;">
+                    <li><a href="https://www.goodreads.com/book/show/4432980-bye-bye-t-rk-e?from_search=true&from_srp=true&qid=5VJkLNe6JF&rank=1" target="_blank">
+                        Lorem, ipsum dolor.
+                    </a></li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
+            </li>
+            <li>Film
+                <ul style="list-style-type: disc">
+                    <li><a href="https://www.imdb.com/title/tt0816692/?ref_=fn_al_tt_1" target="_blank">
+                        Lorem, ipsum dolor.
+                    </a></li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
+            </li>
+            <li>Dizi
+                <ul>
+                    <li><a href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1" target="_blank">
+                        Lorem, ipsum dolor.
+                    </a></li>
+                    <li>Lorem, ipsum dolor.</li>
+                    <li>Lorem, ipsum dolor.</li>
+                </ul>
+            </li>
+        </ol>
+    </div>
+    <!-- resim bolumu -->
+    <hr>
+    <div"><a href="https://picsum.photos/"><img src="https://picsum.photos/600/400" alt="lorem picsum random image" title="LOREM PICSUM"></a></div>
+
 </body>
 </html>
