bolum Sonu alistirmasi tamamlandi

--- a/index.html
+++ b/index.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="html,odev,kodluyoruz,patika">
-    <meta name="description" content="2 numarali odeve ait kaynak kod">
-
-    <title>htmlOdev1</title>
+    <meta name="keywords" content="patika,kodluyoruz,html,alistirma">
+    <meta name="description" content="patika,kodluyoruz,html,alistirma">
+    <title>Calisma</title>
 </head>
+
 <body>
-    <h1>Ömer Serdar KÖSE</h1>
-    <!-- hakkinda bolumu -->
-    <h2>About</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores sapiente laudantium dicta expedita eaque magni earum, nostrum odio, sint corrupti voluptatum odit consequatur consectetur reiciendis itaque minima incidunt accusantium eos eveniet aliquid. Dolor placeat provident est tempora vel nam quis accusantium rem officiis magnam? Nihil repudiandae tempora esse harum?
-    </p>
-    <h3>10 Fingers Try</h3>
-    <h4>The US has enlisted commercial planes to help with the evacuation of from Afghanistan</h4>
-    <p>A Pentagon statement said the 18 aircraft would not fly to Kabul, but would instead help move people transiting in thirf countries.<br>Many thousands of Afghans are crowded outside Kabul airport,desperate to flee the country after the Talibam swept to power last week.<br>At least 20 people hace died, a NATO official told Reuters news agency.<br>But reports suhhest the scene is calmer om Sunday than in previous days.<br>UK armed forces minister Hames Heappey said the Taliban were npw marshalling people into queues at Hamid Karzai International Airport, making the process faster for thpse hoping to leave. Bla bla bla....</p>
-    <!-- ilgi alani bolumu -->
-    <div>
-        <h3>Ilgi Alanlari</h3>
-        <ol>
-            <li>Kitap
-                <ul style="list-style-type: square;">
-                    <li><a href="https://www.goodreads.com/book/show/4432980-bye-bye-t-rk-e?from_search=true&from_srp=true&qid=5VJkLNe6JF&rank=1" target="_blank">
-                        Lorem, ipsum dolor.
-                    </a></li>
-                    <li>Lorem, ipsum dolor.</li>
-                    <li>Lorem, ipsum dolor.</li>
-                </ul>
-            </li>
-            <li>Film
-                <ul style="list-style-type: disc">
-                    <li><a href="https://www.imdb.com/title/tt0816692/?ref_=fn_al_tt_1" target="_blank">
-                        Lorem, ipsum dolor.
-                    </a></li>
-                    <li>Lorem, ipsum dolor.</li>
-                    <li>Lorem, ipsum dolor.</li>
-                </ul>
-            </li>
-            <li>Dizi
-                <ul>
-                    <li><a href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1" target="_blank">
-                        Lorem, ipsum dolor.
-                    </a></li>
-                    <li>Lorem, ipsum dolor.</li>
-                    <li>Lorem, ipsum dolor.</li>
-                </ul>
-            </li>
-        </ol>
-    </div>
-    <!-- resim bolumu -->
-    <hr>
-    <div"><a href="https://picsum.photos/"><img src="https://picsum.photos/600/400" alt="lorem picsum random image" title="LOREM PICSUM"></a></div>
+    <!-- header baslangic -->
+    <header>
+        <nav>
+            <ul style="list-style-type: none;">
+                <li style="display: inline;"><a href="#">anasayfa</a></li>
+                <li style="display: inline;"><a href="#">hakkimizda</a></li>
+                <li style="display: inline;"><a href="#">iletisim</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- header bitis -->
+
+    <!-- main baslangic -->
+    <main>
+        <section>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod molestiae totam quidem, architecto minima
+                ipsam sed temporibus eum in repudiandae possimus iure atque omnis facere quibusdam doloribus ab delectus
+                quasi ex? Ut quasi ad nemo inventore corporis soluta eaque doloremque eveniet, culpa obcaecati quis,
+                illum animi! Architecto, maxime facilis. Dolorum?
+            </p>
+        </section>
+        <section>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod molestiae totam quidem, architecto minima
+                ipsam sed temporibus eum in repudiandae possimus iure atque omnis facere quibusdam doloribus ab delectus
+                quasi ex? Ut quasi ad nemo inventore corporis soluta eaque doloremque eveniet, culpa obcaecati quis,
+                illum animi! Architecto, maxime facilis. Dolorum?
+            </p>
+        </section>
+        <section>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod molestiae totam quidem, architecto minima
+                ipsam sed temporibus eum in repudiandae possimus iure atque omnis facere quibusdam doloribus ab delectus
+                quasi ex? Ut quasi ad nemo inventore corporis soluta eaque doloremque eveniet, culpa obcaecati quis,
+                illum animi! Architecto, maxime facilis. Dolorum?
+            </p>
+        </section>
+        <hr>
+
+        <!-- link map-area denemesi -->
+        <img src="https://picsum.photos/id/45/400/400" alt="Workplace" usemap="#workmap">
+
+        <map name="workmap">
+            <area shape="rect" coords="34,44,270,350" alt="link1" href="#">
+            <area shape="rect" coords="290,172,333,250" alt="link2" href="#">
+            <area shape="circle" coords="337,300,44" alt="link3" href="#">
+        </map>
+    </main>
+    <!-- main baslangic -->
+
+    <!-- footer baslangic -->
+    <footer>
+        <nav>
+            <ul style="list-style-type: none;">
+                <li><a href="#">anasayfa</a></li>
+                <li><a href="#">hakkimizda</a></li>
+                <li><a href="#">iletisim</a></li>
+            </ul>
+        </nav>
+    </footer>
+    <!-- footer baslangic -->
 
 </body>
+
 </html>
