--- a/index.html
+++ b/index.html
@@ -1,59 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="html,odev,kodluyoruz,patika">
-    <meta name="description" content="2 numarali odeve ait kaynak kod">
-
-    <title>htmlOdev1</title>
+    <meta name="keywords" content="google,search,arama,google amca">
+    <meta name="description" content="I know everything, just ask me!!">
+    <title>Google</title>
 </head>
-<body>
-    <h1>Ömer Serdar KÖSE</h1>
-    <!-- hakkinda bolumu -->
-    <h2>About</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt dolores sapiente laudantium dicta expedita eaque magni earum, nostrum odio, sint corrupti voluptatum odit consequatur consectetur reiciendis itaque minima incidunt accusantium eos eveniet aliquid. Dolor placeat provident est tempora vel nam quis accusantium rem officiis magnam? Nihil repudiandae tempora esse harum?
-    </p>
-    <h3>10 Fingers Try</h3>
-    <h4>The US has enlisted commercial planes to help with the evacuation of from Afghanistan</h4>
-    <p>A Pentagon statement said the 18 aircraft would not fly to Kabul, but would instead help move people transiting in thirf countries.<br>Many thousands of Afghans are crowded outside Kabul airport,desperate to flee the country after the Talibam swept to power last week.<br>At least 20 people hace died, a NATO official told Reuters news agency.<br>But reports suhhest the scene is calmer om Sunday than in previous days.<br>UK armed forces minister Hames Heappey said the Taliban were npw marshalling people into queues at Hamid Karzai International Airport, making the process faster for thpse hoping to leave. Bla bla bla....</p>
-    <!-- ilgi alani bolumu -->
-    <div>
-        <h3>Ilgi Alanlari</h3>
-        <ol>
-            <li>Kitap
-                <ul style="list-style-type: square;">
-                    <li><a href="https://www.goodreads.com/book/show/4432980-bye-bye-t-rk-e?from_search=true&from_srp=true&qid=5VJkLNe6JF&rank=1" target="_blank">
-                        Lorem, ipsum dolor.
-                    </a></li>
-                    <li>Lorem, ipsum dolor.</li>
-                    <li>Lorem, ipsum dolor.</li>
-                </ul>
-            </li>
-            <li>Film
-                <ul style="list-style-type: disc">
-                    <li><a href="https://www.imdb.com/title/tt0816692/?ref_=fn_al_tt_1" target="_blank">
-                        Lorem, ipsum dolor.
-                    </a></li>
-                    <li>Lorem, ipsum dolor.</li>
-                    <li>Lorem, ipsum dolor.</li>
-                </ul>
-            </li>
-            <li>Dizi
-                <ul>
-                    <li><a href="https://www.imdb.com/title/tt0903747/?ref_=fn_al_tt_1" target="_blank">
-                        Lorem, ipsum dolor.
-                    </a></li>
-                    <li>Lorem, ipsum dolor.</li>
-                    <li>Lorem, ipsum dolor.</li>
-                </ul>
-            </li>
-        </ol>
-    </div>
-    <!-- resim bolumu -->
-    <hr>
-    <div"><a href="https://picsum.photos/"><img src="https://picsum.photos/600/400" alt="lorem picsum random image" title="LOREM PICSUM"></a></div>
 
+<body>
+    <!-- header baslangic -->
+    <header>
+        <center>
+            <img src="https://web.archive.org/web/19990504112211im_/http://www.google.com/google.jpg"
+                alt="Google Logosu">
+        </center>
+    </header>
+    <!-- header bitis -->
+
+    <!-- main baslangic -->
+    <main>
+        <center>
+            <form action="#">
+                <label>Search the web using Google!</label><br>
+                <input type="text"><br>
+                <input type="button" value="Google Search">
+                <input type="button" value="I'm feeling lucky">
+            </form>
+            <br>
+        </center>
+    </main>
+    <!-- main bitis -->
+
+    <!-- footer baslangic -->
+    <footer>
+        <center>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>
+                            Special Searches <br>
+                            <a href="#">Stanford Search</a><br>
+                            <a href="#">Linux Search</a>
+                        </td>
+                        <td>
+                            <a href="#"> Help!</a><br>
+                            <a href="#">About Google!</a><br>
+                            <a href="#">Company Info</a><br>
+                            <a href="#">Google! Logos</a>
+                        </td>
+                        <td>
+                            <form action="#">
+                                <label>Get Google! <br> updates monthly:</label><br>
+                                <input type="text" placeholder="your e-mail"><br>
+                                <input type="button" value="Subscribe">
+                                <a href="#">Achive</a>
+                            </form>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </center>
+    </footer>
+    <!-- footer bitis -->
 </body>
 </html>
