--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -21,28 +21,21 @@
                 <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="urunler.html">Urunlerimiz</a></li>
                 <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="hakkimizda.html">Hakkimizda</a></li>
             </ul>
-            <h2 class="ta-c tt m-1">Ana Sayfa</h2>
+            <h2 class="ta-c tt m-1">Hakkimizda</h2>
         </nav>
     </header>
     <!-- header bitis -->
     <!-- main baskangic -->
     <main>
         <section>
-            <p class="m-1 ta-c">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi commodiperferendis ratione nihil, incidunt impedit architecto et amet voluptas quis numquam 
-                <span><a
-                        href="urunler.html">Urunler</a>
-                </span>
-                Quidem magni enim modi dignissimos.
+            <h3 class="tt-c fw-b m-1 text-purple">Viztonumuz</h3>
+            <p id="vizyon" class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe asperiores esse molestiae illo tempora labore voluptate placeat nobis veritatis itaque.
             </p>
         </section>
         <section>
-            <h3 class="ta-c tt-c">Envantere ait ana basliklar</h3>
-            <ul class="ta-c m-1 lst">
-                <li class="m-1 tt d-ib">Gitar</li>
-                <li class="m-1 tt d-ib">Piyano</li>
-                <li class="m-1 tt d-ib">Davul</li>
-                <li class="m-1 tt d-ib">Keman</li>
-            </ul>
+            <h3 class="tt-c fw-b m-1 text-purple">Misyonumuz</h3>
+            <p id="misyon" class="m-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse distinctio dignissimos maxime nobis delectus porro. Amet unde fugiat fuga eum animi, quidem similique aliquam accusantium, laborum explicabo expedita ab a.
+            </p>
         </section>
 
     </main>
