--- a/index.html
+++ b/index.html
@@ -1,57 +1,124 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" href="https://www.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png">
+    <title>Google</title>
+  </head>
+  <body>
+    <div class="panel">
+      <nav>
+        <ul class="header">
+          <li class="pic headerli">
+            <a href="#" target="_blank"
+              ><img
+                src="assets/profilepic.jpg"
+                alt=""
+                style="border-radius: 50%;"
+            /></a>
+          </li>
+          <li style="margin: 10px;" class="headerli">
+            <a href="https://www.google.com.tr/intl/en/about/products?tab=wh"
+              ><svg focusable="false" viewbox="0 0 24 24" style="width: 24px; height: 24px; margin-right: 7px; margin-top:-5px; fill:#5f6368;"><path d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"></path></svg></a
+            >
+          </li>
+          <li style="margin: 10px; margin-left: -2px;" class="headerli">
+            <a
+              href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl"
+              >Images</a
+            >
+          </li>
+          <li style="margin: 10px" class="headerli">
+            <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl"
+              >Gmail</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="container">
+        <img
+          src="assets/logo.png"
+          width="350px"
+          alt=""
+        />
+      </div>
+      <div class="search-area">
+        <div class="search">
+          <div class="search-img">
+            <span>
+              <svg
+                focusable="false"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+              >
+                <path
+                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+                ></path>
+              </svg>
+            </span>
+          </div>
+          <div class="input-enter">
+            <div class="input-area">
+              <input
+                type="text"
+                class="input"
+                maxlength="2048"
+                autofocus="true"
+              />
+            </div>
+          </div>
+          <div class="mic-img">
+              <img src="assets/voicelogo.png" alt="" style="height: 24px; margin-right: 5px; margin-top: 5px;">
+          </div>
+        </div>
+      </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="patika,odev,css,html">
-    <meta name="description" content="css bolumu ilk odev">
-    <link rel="stylesheet" href="style.css">
-    <title>VIOPIA</title>
-</head>
+      <div class="buttons">
+        <a href=""
+          ><button class="googlesearch">Google Search</button></a
+        >
+        <a href=""
+          ><button class="feelinglucky">I'm Feeling Lucky</button></a
+        >
+      </div>
+    </div>
 
-<body>
-    <!-- header baskangic -->
-    <header>
-        <h1 class="ta-c tt">Muzik Dukkanim</h1>
-        <nav>
-            <ul class="ta-c td">
-                <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="index.html">Ana Sayfa</a></li>
-                <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="urunler.html">Urunlerimiz</a></li>
-                <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="hakkimizda.html">Hakkimizda</a></li>
-            </ul>
-            <h2 class="ta-c tt m-1">Ana Sayfa</h2>
-        </nav>
-    </header>
-    <!-- header bitis -->
-    <!-- main baskangic -->
-    <main>
-        <section>
-            <p class="m-1 ta-c">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi commodiperferendis ratione nihil, incidunt impedit architecto et amet voluptas quis numquam 
-                <span><a
-                        href="urunler.html">Urunler</a>
-                </span>
-                Quidem magni enim modi dignissimos.
-            </p>
-        </section>
-        <section>
-            <h3 class="ta-c tt-c">Envantere ait ana basliklar</h3>
-            <ul class="ta-c m-1 lst">
-                <li class="m-1 tt d-ib">Gitar</li>
-                <li class="m-1 tt d-ib">Piyano</li>
-                <li class="m-1 tt d-ib">Davul</li>
-                <li class="m-1 tt d-ib">Keman</li>
-            </ul>
-        </section>
+    <nav>
+      <ul class="footer">
+        <li class="footerli">
+          <a
+            href="https://www.google.com/intl/en_tr/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpafooter&fg=1"
+            >Advertising</a>
+        </li>
+        <li class="footerli">
+          <a
+            href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral&utm_campaign=google_hpbfooter&fg=1"
+            >Business</a>
+        </li>
+        <li class="footerli">
+          <a
+            href="https://about.google/?utm_source=google-TR&utm_medium=referral&utm_campaign=hp-footer&fg=1"
+            >About</a>
+        </li>
+        <li class="footerli">
+          <a href="https://google.com/search/howsearchworks/?fg=1"
+            >How Search works</a>
+        </li>
 
-    </main>
-    <!-- main bitis -->
-    <!-- footer baskangic -->
-    <footer>
+        <li class="footerli" style="float: right; margin-right: 35px">
+          <a href="https://www.google.com/preferences?hl=en">Settings</a>
+        </li>
 
-    </footer>
-    <!-- footer bitis -->
-</body>
+        <li class="footerli" style="float: right">
+          <a href="https://policies.google.com/terms?hl=en-TR&fg=1">Terms</a>
+        </li>
 
+        <li class="footerli" style="float: right">
+          <a href="https://policies.google.com/privacy?hl=en-TR&fg=1">Privacy</a>
+        </li>
+      </ul>
+    </nav>
+  </body>
 </html>
