--- a/index.html
+++ b/index.html
@@ -7,51 +7,164 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="patika,odev,css,html">
     <meta name="description" content="css bolumu ilk odev">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Qwigley&family=WindSong:wght@400;500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <script src="https://kit.fontawesome.com/6f7e52738c.js" crossorigin="anonymous"></script>
     <title>VIOPIA</title>
 </head>
 
 <body>
     <!-- header baskangic -->
     <header>
-        <h1 class="ta-c tt">Muzik Dukkanim</h1>
-        <nav>
-            <ul class="ta-c td">
-                <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="index.html">Ana Sayfa</a></li>
-                <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="urunler.html">Urunlerimiz</a></li>
-                <li class="d-ib mr-2 ml-2 mt-03 tt"><a class="td text-red" href="hakkimizda.html">Hakkimizda</a></li>
-            </ul>
-            <h2 class="ta-c tt m-1">Ana Sayfa</h2>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+            <div class="container">
+                <a class="navbar-brand font-weight-bold ff-cinzel" href="index.html">ViOPiA</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Ana Sayfa</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="urunler.html">Urunler</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="hakkimizda.html">Hakkimizda</a>
+                        </li>
+                    </ul>
+                </div>
         </nav>
     </header>
     <!-- header bitis -->
     <!-- main baskangic -->
     <main>
-        <section>
-            <p class="m-1 ta-c">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam eligendi commodiperferendis ratione nihil, incidunt impedit architecto et amet voluptas quis numquam 
-                <span><a
-                        href="urunler.html">Urunler</a>
-                </span>
-                Quidem magni enim modi dignissimos.
-            </p>
-        </section>
-        <section>
-            <h3 class="ta-c tt-c">Envantere ait ana basliklar</h3>
-            <ul class="ta-c m-1 lst">
-                <li class="m-1 tt d-ib">Gitar</li>
-                <li class="m-1 tt d-ib">Piyano</li>
-                <li class="m-1 tt d-ib">Davul</li>
-                <li class="m-1 tt d-ib">Keman</li>
-            </ul>
-        </section>
 
+        <div class="jumbotron jumbotron-fluid p-1 bg-jumbotron">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 pt-2 pt-sm-4 align-items-start">
+                        <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100 img-fluid" style="width: 500px; height: 250px;" src="https://picsum.photos/500/300"
+                                        alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100 img-fluid" style="width: 500px; height: 250px;" src="https://picsum.photos/500/200"
+                                        alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100 img-fluid" style="width: 500px; height: 250px;" src="https://picsum.photos/400/200"
+                                        alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                                data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                                data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 align-items-start">
+                        <h1 class="display-5 mt-2 mt-sm-3">VIOPIA Music</h1>
+                        <p class="lead">Violin & Piano Market</p>
+                        <hr class="my-3">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem numquam eveniet quibusdam
+                            vero
+                            ducimus dicta aspernatur doloribus nostrum odio deserunt?</p>
+                        <p class="lead">
+                            <a class="btn btn-primary btn-md my-1 mt-sm-3" href="hakkimizda.html" role="button">Hakkimizda</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-md-3 text-center"><a href="urunler.html" style="text-decoration: none;">
+                            <div class="card border-0 align-items-center">
+                                <img src="https://picsum.photos/id/155/200/200" class="card-resim img-thumbnail"
+                                    alt="enstrumanResmi">
+                                <div class="card-body align-items-center">
+                                    <h5 class="card-title">Keman</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-3 text-center"><a href="urunler.html" style="text-decoration: none;">
+                            <div class="card border-0 align-items-center">
+                                <img src="https://picsum.photos/id/158/200/200" class="card-resim img-thumbnail"
+                                    alt="enstrumanResmi">
+                                <div class="card-body align-items-center">
+                                    <h5 class="card-title">Piyano</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-3 text-center"><a href="urunler.html" style="text-decoration: none;">
+                            <div class="card border-0 align-items-center">
+                                <img src="https://picsum.photos/id/151/200/200" class="card-resim img-thumbnail"
+                                    alt="enstrumanResmi">
+                                <div class="card-body align-items-center">
+                                    <h5 class="card-title">Davul</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-md-3 text-center"><a href="urunler.html" style="text-decoration: none;">
+                            <div class="card border-0 align-items-center">
+                                <img src="https://picsum.photos/id/159/200/200" class="card-resim img-thumbnail"
+                                    alt="enstrumanResmi">
+                                <div class="card-body align-items-center">
+                                    <h5 class="card-title">Gitar</h5>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </div>
     </main>
     <!-- main bitis -->
     <!-- footer baskangic -->
-    <footer>
-
-    </footer>
+    <footer class="footer bg-dark">
+        <div class="container p-2 text-center">
+          <span class="text-muted text-light"><i class="far fa-copyright"></i>2021, omerserdarkose</span>
+        </div>
+      </footer>
     <!-- footer bitis -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
