--- a/index.html
+++ b/index.html
@@ -1,33 +1,78 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta rel="keywords" content="to do list, kodluyoruz, patika, javascript odev">
+    <meta rel="description" content="javascript konusuna ait 2 no.lu odeve ait calisma">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-    <title>Kodluyoruz Javascript Saat Ödevi</title>
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/6f7e52738c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <title>javascriptOdev02</title>
 </head>
 
-<body class="bg-dark">
-    <div class="col-sm-12">
-        <div class="text-center">
-            <img src="https://cdn.sanity.io/images/9kdepi1d/production/65c832d202a503b15d99e628f4313782f3ef50db-300x62.png"
-                alt="" class="rounded" />
-            <div class="text1 text-center mt-2 mt-sm-0">
-                Merhaba, <strong><span id="myName"></span></strong>! Hoş geldin!
+<body>
+    <header>
+        <div class="jumbotron pb-1 pt-3">
+            <div class="container">
+                <h1 class="display-4 text-center font-weight-bold">To Do List</h1>
+                <p class="lead text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione eligendi
+                    sunt corrupti dolorum labore cupiditate numquam non libero natus mollitia. <span
+                        class="lead font-italic"><br>...the palest ink is stronger than the sharpest memory....</span>
+                </p>
+                <hr class="my-4">
+                <form>
+                    <div class="input-group">
+                        <input id="newTaskName" type="text" class="form-control" placeholder="Type a New Task">
+                        <div class="input-group-append">
+                            <button id="addBtn" type="submit" class="btn btn-primary"><i class="fas fa-plus mr-2"></i>ADD</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div id="myClock" class="clock mt-2 mt-sm-0" onload="showTime()"></div>
-            <div class="text2 text-center mt-2 mt-sm-0">
-                tarihinde
-                <strong>Kodluyoruz Frontend Web Development Patikası</strong>'nın
-                Javascript bölümü 1. Ödevindesiniz.
+            </p>
+        </div>
+    </header>
+    <main>
+        <div class="container pb-5">
+            <div class="card">
+                <div class="card-header font-weight-bold">
+                    <h4 class="float-left">Task List</h4>
+                    <button id="editBtn" type="button" class="btn btn-outline-secondary float-right" data-toggle="collapse" data-target="#editMenu">Edit</button>
+                    <div id="editMenu" class="collapse float-right mr-0">
+                        <div class="d-inline custom-control custom-checkbox mr-3 p-0 align-bottom">
+                            <input type="checkbox" class="custom-control-input" id="customCheck1">
+                            <label class="custom-control-label" for="customCheck1">Select All</label>
+                        </div>
+                        <button id="delBtn" type="button" class="btn btn-outline-danger mr-2 hidden">Delete</button>
+                    </div>
+                    
+                </div>
+                <div class="card-body p-0">
+                    <ul id="taskList" class="list-group list-group-flush">
+                        <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                        <li class="list-group-item">Lorem ipsum dolor sit amet consectetur.</li>
+                        <li class="list-group-item">Lorem, ipsum.</li>
+                        <li class="list-group-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur!</li>
+                        <li class="list-group-item">Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
+
     <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
